fixed resizing issues with the backgroung container(wrap)

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1{
 
 .wrap{
     width: 100%;
-    height: calc(100vh - 90px);
+    min-height: calc(100vh - 90px);
     background-color: white;
     padding: 20px;
     border-top-left-radius: 28px;
